--- a/scripts/doc/irrlicht/doxygen-pdf.cfg
+++ b/scripts/doc/irrlicht/doxygen-pdf.cfg
@@ -45,7 +45,7 @@ PROJECT_BRIEF          =
 # exceed 55 pixels and the maximum width should not exceed 200 pixels.
 # Doxygen will copy the logo to the output directory.
 
-PROJECT_LOGO           = irrlichtlogo.png
+PROJECT_LOGO           = logo.png
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute)
 # base path where the generated documentation will be put.
@@ -630,7 +630,7 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT                  = ../../../include/ \
-                         tut.txt
+                         ../../../source/Irrlicht
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
