--- a/scripts/doc/irrlicht/doxygen.cfg
+++ b/scripts/doc/irrlicht/doxygen.cfg
@@ -630,8 +630,7 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT                  = ../../../include/ \
-							  ../../../source/Irrlicht/ \
-                         tut.txt
+			 ../../../source/Irrlicht/
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
