Correct doc generation scripts

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ examples_tests/06.MeshLoaders/bin/extrusionLogo_TEST_fixed.baw
 examples_tests/07.HardwareSkinning/bin/dwarf.baw
 source/Irrlicht/libIrrlichtServer.a
 lib/*
+doctemp/*
+
