--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -139,8 +139,6 @@
 					<Add option="-Wall" />
 					<Add option="-std=c++11" />
 					<Add option="-g" />
-					<Add option="-W" />
-					<Add option="-Wno-unused-parameter" />
 					<Add option="-fno-omit-frame-pointer" />
 					<Add option="-fno-exceptions" />
 					<Add option="-fuse-ld=gold" />
@@ -182,7 +180,6 @@
 					<Add option="-Wextra" />
 					<Add option="-std=c++11" />
 					<Add option="-W" />
-					<Add option="-Wno-unused-parameter" />
 					<Add option="-fno-exceptions" />
 					<Add option="-fuse-ld=gold" />
 					<Add option="-D_IRR_STATIC_LIB_" />
@@ -213,7 +210,6 @@
 					<Add option="-Wextra" />
 					<Add option="-std=c++11" />
 					<Add option="-W" />
-					<Add option="-Wno-unused-parameter" />
 					<Add option="-ffast-math" />
 					<Add option="-fno-exceptions" />
 					<Add option="-mfpmath=sse" />
@@ -239,7 +235,11 @@
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-D_IRR_COMPILE_WITH_OPENGL_" />
+			<Add option="-Wno-sequence-point" />
+			<Add option="-Wno-error=ignored-attributes" />
+			<Add option="-Wno-error=unused-function" />
+			<Add option="-Wno-error=unused-variable" />
+			<Add option="-Wno-unused-parameter" />
 			<Add option="-D_7ZIP_ST" />
 		</Compiler>
 		<Unit filename="../../include/CBAWFile.h" />
@@ -266,6 +266,7 @@
 		<Unit filename="../../include/ICPUBuffer.h" />
 		<Unit filename="../../include/ICameraSceneNode.h" />
 		<Unit filename="../../include/ICursorControl.h" />
+		<Unit filename="../../include/IDescriptorSet.h" />
 		<Unit filename="../../include/IDriverFence.h" />
 		<Unit filename="../../include/IDummyTransformationSceneNode.h" />
 		<Unit filename="../../include/IEventReceiver.h" />
@@ -310,10 +311,12 @@
 		<Unit filename="../../include/ISceneNodeAnimatorCameraMaya.h" />
 		<Unit filename="../../include/ISceneNodeAnimatorFactory.h" />
 		<Unit filename="../../include/ISceneNodeFactory.h" />
+		<Unit filename="../../include/IShader.h" />
 		<Unit filename="../../include/IShaderConstantSetCallBack.h" />
 		<Unit filename="../../include/ISkinnedMesh.h" />
 		<Unit filename="../../include/ISkinnedMeshSceneNode.h" />
 		<Unit filename="../../include/ISkinningStateManager.h" />
+		<Unit filename="../../include/IStorageImage.h" />
 		<Unit filename="../../include/ITexture.h" />
 		<Unit filename="../../include/ITextureBufferObject.h" />
 		<Unit filename="../../include/IThreadBound.h" />
@@ -322,6 +325,7 @@
 		<Unit filename="../../include/IVideoDriver.h" />
 		<Unit filename="../../include/IVideoModeList.h" />
 		<Unit filename="../../include/IVirtualTexture.h" />
+		<Unit filename="../../include/IVulkanPrebaked.h" />
 		<Unit filename="../../include/IWriteFile.h" />
 		<Unit filename="../../include/IrrCompileConfig.h" />
 		<Unit filename="../../include/IrrlichtDevice.h" />
@@ -340,6 +344,7 @@
 		<Unit filename="../../include/SMaterialLayer.h" />
 		<Unit filename="../../include/SMesh.h" />
 		<Unit filename="../../include/SSkinMeshBuffer.h" />
+		<Unit filename="../../include/STextureSamplingParams.h" />
 		<Unit filename="../../include/STriangleMeshCollider.h" />
 		<Unit filename="../../include/SVertexIndex.h" />
 		<Unit filename="../../include/SVertexManipulator.h" />
